Collapsed menu margin fix

--- a/src/menu.css
+++ b/src/menu.css
@@ -19,6 +19,7 @@
 	padding: 10px;
 	text-align: center;
 }
+label.menutoggle{ margin: 0 !important; }
 #menutoggle {
 	display: none;
 }
